# oxidized-crafting

./: Cargo.toml  README.md  shell.nix
.github/workflows/: build.yml
src/: handshake.rs  lan.rs  login.rs  main.rs  nbt.rs  packet.rs  play.rs  position.rs  state.rs  status.rs  text.rs
src/packet/: mod.rs  packet_data.rs
src/play/: mod.rs  registry_codec.rs
