[package]
name = "oxidized-crafting"
version = "0.1.0"
authors = ["urlordjames (James Connolly) <32751441+urlordjames@users.noreply.github.com>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
serde_json = "1.0"
quartz_nbt = { version = "0.2", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.24", features = [ "net", "rt-multi-thread", "macros", "io-util" ] }